researchApp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-deployment
  labels:
    app: review
spec:
  replicas: 2
  selector:
    matchLabels:
      app: review
  template:
    metadata:
      labels:
        app: review
    spec:
      containers:
        - name: review-app
          image: emiresh/echo_env_vars
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  labels:
    app: product
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product-app
          image: emiresh/echo_env_vars
          ports:
            - containerPort: 8080
