researchApp/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: review-servicecl
spec:
  type: ClusterIP
  selector:
    app: review
  ports:
  - port: 80
    targetPort: 8080
    
---
apiVersion: v1
kind: Service
metadata:
  name: product-servicecl
spec:
  type: ClusterIP
  selector:
    app: product
  ports:
  - port: 80
    targetPort: 8080
