researchApp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shiping-ingress
spec:
  rules:
  - host: review.research.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: review-servicecl
            port:
              number: 80
  - host: product.research.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: product-servicecl
            port:
              number: 80
